# nqi

./: .gitignore  .gitmodules  README.md  install.sh  nqi.py  nqx.py  nqy.py  pyproject.toml  setup.py  uninstall.sh
nqi/: app.py  cli.py  logic.py
nqx_tui/: app.py  logic.py  styles.css  widgets.py
nqy/: app.py  logic.py  widgets.py
tests/: test_app_actions.py  test_cli.py  test_logic.py
tools/: Dockerfile.test  test-install.sh
