[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nqi"
version = "0.1.0"
description = "A Textual TUI for the nq job scheduler"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.40.0",
]

[project.scripts]
nqi = "nqi.app:main"

[tool.setuptools.packages.find]
include = ["nqi*"]

[tool.setuptools.package-data]
nqi = ["bin/*", "*.css"]
